[package]
name = "bumblefooot_lib"
version = "0.1.0"
authors = ["Dotan Nahum <jondotan@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A bumblefoot library"


[lib]
name = "bumblefooot_lib"

[dependencies]
serde="1"
serde_json="1"
serde_derive="1"
serde_yaml="0.7.5"
anyhow = "1.0.44"


